// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridViewRows component Default component 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px); left: 0px;"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Jo
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridViewRows component With row details 1`] = `
<div
  class="grid-view__rows"
  style="transform: translateY(0px) translateX(0px); left: 0px;"
>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count grid-view__row-count--hide-on-hover"
          title="2"
        >
          <div
            class="grid-view__row-count-content"
          >
            
              2
            
          </div>
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="baserow-icon-enlarge-row"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Bram
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count grid-view__row-count--hide-on-hover"
          title="4"
        >
          <div
            class="grid-view__row-count-content"
          >
            
              4
            
          </div>
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="baserow-icon-enlarge-row"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          foo
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          bar
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-view__row"
  >
    <!---->
     
    <div
      class="grid-view__column grid-view__column--no-border-right"
      style="width: 72px;"
    >
      <div
        class="grid-view__row-info"
      >
        <div
          class="grid-view__row-count grid-view__row-count--hide-on-hover"
          title="3"
        >
          <div
            class="grid-view__row-count-content"
          >
            
              3
            
          </div>
        </div>
         
        <div
          class="grid-view__row-drag"
        />
         
        <a
          class="grid-view__row-more"
        >
          <i
            class="baserow-icon-enlarge-row"
          />
        </a>
         
      </div>
    </div>
     
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          
        </div>
      </div>
    </div>
    <div
      class="grid-view__column"
      style="width: 200px;"
    >
      <div
        class="grid-view__cell"
      >
        <div
          class="grid-field-text"
        >
          Jo
        </div>
      </div>
    </div>
  </div>
</div>
`;
